--- a/src/Invisionware.Net.RestEase/Invisionware.Net.RestEase.csproj
+++ b/src/Invisionware.Net.RestEase/Invisionware.Net.RestEase.csproj
@@ -4,7 +4,7 @@
 		<PackageId>Invisionware.Net.RestEase</PackageId>
 		<Authors>Invisionware</Authors>
 		<PackageProjectUrl>https://github.com/Invisionware/Invisionware.Net</PackageProjectUrl>
-		<PackageLicenseUrl>https://raw.githubusercontent.com/Invisionware/Invisionware.Net/master/LICENSE</PackageLicenseUrl>
+		<license>Apache-2.0</license>
 		<PackageIconUrl>https://github.com/Invisionware/Invisionware.Net/raw/master/logo.png</PackageIconUrl>
 		<Description>Contains various extensions and supporting utilities for RestEase</Description>
 		<PackageReleaseNotes></PackageReleaseNotes>
@@ -14,8 +14,8 @@
 	</PropertyGroup>
 	<Import Project="..\Invisionware.Net.RestEase.Shared\Invisionware.Net.RestEase.Shared.projitems" Label="Shared" />
 	<ItemGroup>
-		<PackageReference Include="Invisionware.Serialization" Version="1.1.16" />
-		<PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+		<PackageReference Include="Invisionware.Serialization" Version="1.1.18" />
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
 		<PackageReference Include="RestEase" Version="1.4.7" />
 		<PackageReference Include="Serilog" Version="2.7.1" />
 		<PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
