--- a/src/Invisionware.Net/Invisionware.Net.csproj
+++ b/src/Invisionware.Net/Invisionware.Net.csproj
@@ -4,7 +4,7 @@
 		<PackageId>Invisionware.Net</PackageId>
 		<Authors>Invisionware</Authors>
 		<PackageProjectUrl>https://github.com/Invisionware/Invisionware.Net</PackageProjectUrl>
-		<PackageLicenseUrl>https://raw.githubusercontent.com/Invisionware/Invisionware.Net/master/LICENSE</PackageLicenseUrl>
+		<license>Apache-2.0</license>
 		<PackageIconUrl>https://github.com/Invisionware/Invisionware.Net/raw/master/logo.png</PackageIconUrl>
 		<Description>Contains various extension methods and supporting classes for System.Net (Cookies, UrlBuilder, HtmlDecode, etc)</Description>
 		<PackageReleaseNotes></PackageReleaseNotes>
@@ -14,7 +14,7 @@
 	</PropertyGroup>
 	<Import Project="..\Invisionware.Net.Shared\Invisionware.Net.Shared.projitems" Label="Shared" />
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
 		<PackageReference Include="Serilog" Version="2.7.1" />
 	</ItemGroup>
 	<ItemGroup>
