--- a/src/Invisionware.Net.RestEase/Invisionware.Net.RestEase.csproj
+++ b/src/Invisionware.Net.RestEase/Invisionware.Net.RestEase.csproj
@@ -1,31 +1,32 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFrameworks>netcoreapp1.0;netstandard2.0;net472</TargetFrameworks>
 		<PackageId>Invisionware.Net.RestEase</PackageId>
 		<Authors>Invisionware</Authors>
 		<PackageProjectUrl>https://github.com/Invisionware/Invisionware.Net</PackageProjectUrl>
 		<license>Apache-2.0</license>
 		<PackageIconUrl>https://github.com/Invisionware/Invisionware.Net/raw/master/logo.png</PackageIconUrl>
 		<Description>Contains various extensions and supporting utilities for RestEase</Description>
-		<PackageReleaseNotes></PackageReleaseNotes>
+		<PackageReleaseNotes />
 		<Copyright>Copyright © 2018 Invisionware</Copyright>
 		<PackageTags>invisionware restease</PackageTags>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
-	<Import Project="..\Invisionware.Net.RestEase.Shared\Invisionware.Net.RestEase.Shared.projitems" Label="Shared" />
+	
 	<ItemGroup>
-		<PackageReference Include="Invisionware.Serialization" Version="1.1.18" />
+		<PackageReference Include="Invisionware.Serialization" Version="1.1.19-pre01" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
 		<PackageReference Include="RestEase" Version="1.4.7" />
 		<PackageReference Include="Serilog" Version="2.7.1" />
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 		<PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
 	</ItemGroup>
+	
 	<ItemGroup>
 		<ProjectReference Include="..\Invisionware.Net\Invisionware.Net.csproj">
 			<Private>false</Private>
 		</ProjectReference>
 	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Update="NETStandard.Library" Version="2.0.0" />
-	</ItemGroup>
+	
 </Project>
