--- a/src/Invisionware.Net/Invisionware.Net.csproj
+++ b/src/Invisionware.Net/Invisionware.Net.csproj
@@ -20,4 +20,8 @@
 		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 	</ItemGroup>
 	
+	<ItemGroup>
+	  <Folder Include="Extensions\" />
+	</ItemGroup>
+	
 </Project>
