--- a/tests/Invisionware.Net.GeoCoding.Google.Tests/Invisionware.Net.GeoCoding.Google.Tests.csproj
+++ b/tests/Invisionware.Net.GeoCoding.Google.Tests/Invisionware.Net.GeoCoding.Google.Tests.csproj
@@ -11,6 +11,12 @@
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="Invisionware.IoC" Version="1.0.2-pre01" />
     <PackageReference Include="Invisionware.IoC.Autofac" Version="1.0.2-pre01" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.1.66">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
@@ -25,6 +31,22 @@
 
   <ItemGroup>
     <Folder Include="Properties\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="app.config">
+      <TransformOnBuild>true</TransformOnBuild>
+    </None>
+    <None Update="app.Release.config">
+      <IsTransformFile>true</IsTransformFile>
+      <DependentUpon>app.config</DependentUpon>
+    </None>
+    <None Update="appsettings.dev.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
