Geo - Added support for calculating distances between geolocations Geo - Added/Updated unit tests Geo - Added more exception handling Http - Updated logging handler to support before/after callback functions Http - Added unit tests RestEase - Added support for connecting to http logging callback functions

--- a/build.settings.json
+++ b/build.settings.json
@@ -22,7 +22,7 @@
 	"test": {
 		"SourcePath": "./tests",
 		"ResultsPath": "./artifacts",
-		"AssemblyFileSpec": "*.UnitTests.dll",
+		"AssemblyFileSpec": "*.Tests.dll",
 		"Framework": "NUnit3"
 	},
 	"nuget": {
