--- a/tests/Invisionware.Net.GeoCoding.Tests/Invisionware.Net.GeoCoding.Tests.csproj
+++ b/tests/Invisionware.Net.GeoCoding.Tests/Invisionware.Net.GeoCoding.Tests.csproj
@@ -7,19 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FakeItEasy" Version="5.1.1" />
+    <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="5.1.1" />
     <PackageReference Include="FluentAssertions" Version="5.7.0" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="SlowCheetah" Version="2.5.48" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Invisionware.Net\Invisionware.Net.csproj" />
+    <ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding\Invisionware.Net.GeoCoding.csproj" />
   </ItemGroup>
 
 </Project>
