--- a/tests/Invisionware.Net.GeoCoding.Google.Tests/Invisionware.Net.GeoCoding.Google.Tests.csproj
+++ b/tests/Invisionware.Net.GeoCoding.Google.Tests/Invisionware.Net.GeoCoding.Google.Tests.csproj
@@ -1,52 +1,53 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+	<PropertyGroup>
+		<TargetFramework>net472</TargetFramework>
 
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+		<IsPackable>false</IsPackable>
+		<IsTestProject>true</IsTestProject>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.9.4" />
-    <PackageReference Include="FluentAssertions" Version="5.10.0" />
-    <PackageReference Include="Invisionware.IoC" Version="1.0.2-pre02" />
-    <PackageReference Include="Invisionware.IoC.Autofac" Version="1.0.2-pre02" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0" />
-    <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.2.26">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.16.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Autofac" Version="4.9.4" />
+		<PackageReference Include="FluentAssertions" Version="5.10.0" />
+		<PackageReference Include="Invisionware.IoC" Version="1.0.2-pre02" />
+		<PackageReference Include="Invisionware.IoC.Autofac" Version="1.0.2-pre02" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0" />
+		<PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.2.26">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="nunit" Version="3.12.0" />
+		<PackageReference Include="NUnit3TestAdapter" Version="3.16.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding.Google\Invisionware.Net.GeoCoding.Google.csproj" />
-    <ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding.Interfaces\Invisionware.Net.GeoCoding.Interfaces.csproj" />
-    <ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding\Invisionware.Net.GeoCoding.csproj" />
-    <ProjectReference Include="..\..\src\Invisionware.Net\Invisionware.Net.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding.Google\Invisionware.Net.GeoCoding.Google.csproj" />
+		<ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding.Interfaces\Invisionware.Net.GeoCoding.Interfaces.csproj" />
+		<ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding\Invisionware.Net.GeoCoding.csproj" />
+		<ProjectReference Include="..\..\src\Invisionware.Net\Invisionware.Net.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Properties\" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Update="app.config">
-      <TransformOnBuild>true</TransformOnBuild>
-    </None>
-    <None Update="app.Release.config">
-      <IsTransformFile>true</IsTransformFile>
-      <DependentUpon>app.config</DependentUpon>
-    </None>
-    <None Update="appsettings.dev.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Update="app.config">
+			<TransformOnBuild>true</TransformOnBuild>
+		</None>
+		<None Update="app.Release.config">
+			<IsTransformFile>true</IsTransformFile>
+			<DependentUpon>app.config</DependentUpon>
+		</None>
+		<None Update="appsettings.dev.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Update="appsettings.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
