--- a/tests/Invisionware.Net.GeoCoding.Tests/Invisionware.Net.GeoCoding.Tests.csproj
+++ b/tests/Invisionware.Net.GeoCoding.Tests/Invisionware.Net.GeoCoding.Tests.csproj
@@ -1,22 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+	<PropertyGroup>
+		<TargetFramework>net472</TargetFramework>
 
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+		<IsPackable>false</IsPackable>
+		<IsTestProject>true</IsTestProject>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="FakeItEasy" Version="5.5.0" />
-    <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="5.3.0" />
-    <PackageReference Include="FluentAssertions" Version="5.10.0" />
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.16.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FakeItEasy" Version="5.5.0" />
+		<PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="5.3.0" />
+		<PackageReference Include="FluentAssertions" Version="5.10.0" />
+		<PackageReference Include="nunit" Version="3.12.0" />
+		<PackageReference Include="NUnit3TestAdapter" Version="3.16.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding\Invisionware.Net.GeoCoding.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding\Invisionware.Net.GeoCoding.csproj" />
+	</ItemGroup>
 
 </Project>
