--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
 - task: FileTransform@1
   displayName: 'Transform appsettings.json'
   inputs:
-    folderPath: '$(Build.SourcesDirectory)\tests\**'
+    folderPath: '$(Build.SourcesDirectory)\tests\**\*.json'
     enableXmlTransform: false
     fileType: json
     targetFiles: |
