Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,10 +32,10 @@ steps:
 - task: JsonPatch@3
   inputs:
     SyntaxType: 'slick'
-    JsonWorkingDir: '$(Build.SourcesDirectory)\tests'
+    JsonWorkingDir: '$(Build.SourcesDirectory)/tests'
     JsonTargetFilters: |
-      appSettings.json
-      appSettings.*.json
+      /**/appSettings.json
+      /**/appSettings.*.json
     JsonPatchContent: 'googleApiKey => $(googleApiKey)'
     OutputPatchFile: true
     TreatErrors: 'ERROR'
