--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,23 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+- task: replacetokens@3
+  displayName: 'Transform appsetings.json'
+  inputs:
+    rootDirectory: '$(Build.SourcesDirectory)/tests'
+    targetFiles: '**/appSettings.json'
+    encoding: 'auto'
+    writeBOM: true
+    escapeType: 'json'
+    verbosity: 'detailed'
+    actionOnMissing: 'warn'
+    keepToken: false
+    tokenPrefix: '#{'
+    tokenSuffix: '}#'
+
 - task: JsonPatch@3
+  displayName: 'Transform appsetings.json'
+  enabled: false
   inputs:
     SyntaxType: 'slick'
     JsonWorkingDir: '$(Build.SourcesDirectory)/tests'
