--- a/src/Invisionware.Net.GeoCoding.Google/Invisionware.Net.GeoCoding.Google.csproj
+++ b/src/Invisionware.Net.GeoCoding.Google/Invisionware.Net.GeoCoding.Google.csproj
@@ -5,14 +5,22 @@
 		<PackageId>Invisionware.Net.GeoCoding.Google</PackageId>
 		<Authors>Invisionware</Authors>
 		<PackageProjectUrl>https://github.com/Invisionware/Invisionware.Net</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/Invisionware/Invisionware.Net</RepositoryUrl>
+		<RepositoryType>github</RepositoryType>
+		<PackageIcon>logo.png</PackageIcon>
 		<license>Apache-2.0</license>
-		<PackageIconUrl>https://github.com/Invisionware/Invisionware.Net/raw/master/logo.png</PackageIconUrl>
-		<Description>Contains geocoding implementation for google</Description>
-		<PackageReleaseNotes />
-		<Copyright>Copyright © 2018 Invisionware</Copyright>
-		<PackageTags>invisionware geocoding address geo google</PackageTags>
+		<Copyright>Copyright © 2020 Invisionware</Copyright>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Description>Contains geocoding implementation for google</Description>
+		<PackageTags>invisionware geocoding address geo google</PackageTags>
 	</PropertyGroup>
+	
+	<ItemGroup>
+		<None Include="..\..\logo.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Invisionware.IoC" Version="1.0.2-pre02" />
