--- a/src/Invisionware.Net.GeoCoding.Interfaces/Invisionware.Net.GeoCoding.Interfaces.csproj
+++ b/src/Invisionware.Net.GeoCoding.Interfaces/Invisionware.Net.GeoCoding.Interfaces.csproj
@@ -5,14 +5,22 @@
 		<PackageId>Invisionware.Net.GeoCoding.Interfaces</PackageId>
 		<Authors>Invisionware</Authors>
 		<PackageProjectUrl>https://github.com/Invisionware/Invisionware.Net</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/Invisionware/Invisionware.Net</RepositoryUrl>
+		<RepositoryType>github</RepositoryType>
+		<PackageIcon>logo.png</PackageIcon>
 		<license>Apache-2.0</license>
-		<PackageIconUrl>https://github.com/Invisionware/Invisionware.Net/raw/master/logo.png</PackageIconUrl>
-		<Description>Contains geocoding libraries that support most of the plain providers (google, yahoo, etc.)</Description>
-		<PackageReleaseNotes />
-		<Copyright>Copyright © 2018 Invisionware</Copyright>
-		<PackageTags>invisionware geocoding address geo</PackageTags>
+		<Copyright>Copyright © 2020 Invisionware</Copyright>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Description>Contains geocoding libraries that support most of the plain providers (google, yahoo, etc.)</Description>
+		<PackageTags>invisionware geocoding address geo</PackageTags>
 	</PropertyGroup>
+	
+	<ItemGroup>
+		<None Include="..\..\logo.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
 		<Reference Include="System" />
