--- a/src/Invisionware.Net.RestEase/Invisionware.Net.RestEase.csproj
+++ b/src/Invisionware.Net.RestEase/Invisionware.Net.RestEase.csproj
@@ -5,15 +5,23 @@
 		<PackageId>Invisionware.Net.RestEase</PackageId>
 		<Authors>Invisionware</Authors>
 		<PackageProjectUrl>https://github.com/Invisionware/Invisionware.Net</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/Invisionware/Invisionware.Net</RepositoryUrl>
+		<RepositoryType>github</RepositoryType>
+		<PackageIcon>logo.png</PackageIcon>
 		<license>Apache-2.0</license>
-		<PackageIconUrl>https://github.com/Invisionware/Invisionware.Net/raw/master/logo.png</PackageIconUrl>
-		<Description>Contains various extensions and supporting utilities for RestEase</Description>
-		<PackageReleaseNotes />
-		<Copyright>Copyright © 2018 Invisionware</Copyright>
-		<PackageTags>invisionware restease</PackageTags>
+		<Copyright>Copyright © 2020 Invisionware</Copyright>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Description>Contains various extensions and supporting utilities for RestEase</Description>
+		<PackageTags>invisionware restease</PackageTags>
 	</PropertyGroup>
-	
+		
+	<ItemGroup>
+		<None Include="..\..\logo.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Invisionware.Serialization" Version="1.1.19-pre04" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
