--- a/src/Invisionware.Net.GeoCoding.Google/Invisionware.Net.GeoCoding.Google.csproj
+++ b/src/Invisionware.Net.GeoCoding.Google/Invisionware.Net.GeoCoding.Google.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp1.0;netstandard2.0;net472</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
 		<PackageId>Invisionware.Net.GeoCoding.Google</PackageId>
 		<Authors>Invisionware</Authors>
 		<PackageProjectUrl>https://github.com/Invisionware/Invisionware.Net</PackageProjectUrl>
