--- a/tests/Invisionware.Net.GeoCoding.Google.Tests/Invisionware.Net.GeoCoding.Google.Tests.csproj
+++ b/tests/Invisionware.Net.GeoCoding.Google.Tests/Invisionware.Net.GeoCoding.Google.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net47</TargetFramework>
+		<TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net47</TargetFrameworks>
 
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
@@ -9,7 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="5.1.2" />
-		<PackageReference Include="FluentAssertions" Version="5.10.0" />
+		<PackageReference Include="FluentAssertions" Version="5.10.2" />
 		<PackageReference Include="Invisionware.IoC" Version="1.0.2-pre03" />
 		<PackageReference Include="Invisionware.IoC.Autofac" Version="1.0.2-pre03" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.2" />
@@ -20,7 +20,7 @@
 		</PackageReference>
 		<PackageReference Include="nunit" Version="3.12.0" />
 		<PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
