--- a/tests/Invisionware.Net.GeoCoding.Tests/Invisionware.Net.GeoCoding.Tests.csproj
+++ b/tests/Invisionware.Net.GeoCoding.Tests/Invisionware.Net.GeoCoding.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net472</TargetFramework>
+		<TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net47</TargetFrameworks>
 
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
@@ -10,10 +10,10 @@
 	<ItemGroup>
 		<PackageReference Include="FakeItEasy" Version="6.0.0" />
 		<PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="6.0.0" />
-		<PackageReference Include="FluentAssertions" Version="5.10.0" />
+		<PackageReference Include="FluentAssertions" Version="5.10.2" />
 		<PackageReference Include="nunit" Version="3.12.0" />
 		<PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
