--- a/tests/Invisionware.Net.Tests/Invisionware.Net.Tests.csproj
+++ b/tests/Invisionware.Net.Tests/Invisionware.Net.Tests.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net472</TargetFramework>
+		<TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net47</TargetFrameworks>
 
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="FluentAssertions" Version="5.10.0" />
+		<PackageReference Include="FluentAssertions" Version="5.10.2" />
 		<PackageReference Include="nunit" Version="3.12.0" />
 		<PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
 		<PackageReference Include="SlowCheetah" Version="2.5.48" />
 	</ItemGroup>
 
