--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,7 @@ stages:
         pool: Personal-Docker
 
         variables:
+          - group: Invisionware.Common
           - group: Invisionware.Net
           - name: solution
             value: '**/*.sln'
