--- a/tests/Invisionware.Net.RestEase.Tests/Invisionware.Net.RestEase.Tests.csproj
+++ b/tests/Invisionware.Net.RestEase.Tests/Invisionware.Net.RestEase.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net47</TargetFrameworks>
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="FluentAssertions" Version="5.10.2" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.2" />
 		<PackageReference Include="nunit" Version="3.12.0" />
 		<PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
